# hatemail

./: .gitignore  README.md  command.hs  connection.hs  hail.hs  hatemail.cabal  hatemail.hs  mix.exs  parse.hs
config/: config.exs
haskell/: .gitignore  hatemail.cabal
haskell/src/: Connection.hs
lib/: hatemail.ex
src/: Command.hs  Connection.hs  Parse.hs  Response.hs  hatemail.hs
test/: hatemail_test.exs
